CMS7-8766: fixing rendering in IE10/11 Discussed the solution with Arthur, double checked that the dialogs still have a scrollbar in IE10/11 when needed

--- a/cms/api/src/main/styling/less/_modal.less
+++ b/cms/api/src/main/styling/less/_modal.less
@@ -97,8 +97,6 @@
 .hippo-dialog-center {
   flex: auto;
   overflow: auto;
-  // IE10 scrollbars
-  -ms-flex-preferred-size: 0;
 
   .hippo-dialog-feedback.feedback-enabled {
     padding-bottom: 16px;
